# rust-hal-stm32

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: main.rs
