[package]
authors = ["Greg Brooks <greg.brooks@gregox.com>"]
edition = "2018"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
